<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:maxHeight="50dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView_info"
            android:scaleX="1.2"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/photo" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/choose_image"
            android:text="@string/add_photo"
            android:visibility="invisible"
            android:contentDescription="@string/photo"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/imageView_info"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="invisible"
                android:id="@+id/name_info_edit" />

            <EditText
                android:hint="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:id="@+id/surname_info_edit" />

            <EditText
                android:hint="@string/patronymic"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:id="@+id/patronymic_info_edit" />

            <EditText
                android:hint="@string/data"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:id="@+id/birth_info_edit" />

            <EditText
                android:hint="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="invisible"
                android:id="@+id/number1_info_edit" />

            <EditText
                android:hint="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:id="@+id/number2_info_edit" />
            <EditText
                android:hint="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:id="@+id/number3_info_edit" />
            <EditText
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:id="@+id/address_info_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/name_info" />

            <TextView
                android:text="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/surname_info" />

            <TextView
                android:text="@string/patronymic"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:id="@+id/patronymic_info" />

            <TextView
                android:text="@string/data"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/birth_info" />

            <TextView
                android:text="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/number1_info" />

            <TextView
                android:text="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/number2_info" />
            <TextView
                android:text="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/number3_info" />
            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/address_info" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/was_visit_date_text"
                    android:textSize="13sp"
                    android:text="@string/was_dates_visit_text"
                    android:layout_alignParentStart="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_visit_date_text"
                    android:layout_alignParentEnd="true"
                    android:textSize="13sp"
                    android:text="@string/next_visit_dates_text"
                    />

                <ListView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/next_visits"
                    android:layout_below="@+id/next_visit_date_text">

                </ListView>

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/next_visits"
                    android:layout_alignParentStart="true"
                    android:id="@+id/was_visits"
                    android:layout_below="@+id/was_visit_date_text">
                </ListView>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/save_button"
        android:text="@string/save"
        android:visibility="invisible"
        android:layout_gravity="center"/>
</LinearLayout>